--- a/native/qrcoderust_nif/Cargo.toml
+++ b/native/qrcoderust_nif/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 rustler = "0.22.2"
-qrcode = "0.11"
+qrcode = { version = "0.11", default-features = false }
