--- a/native/qrcoderust_nif/Cargo.toml
+++ b/native/qrcoderust_nif/Cargo.toml
@@ -3,6 +3,7 @@ name = "qrcoderust_nif"
 version = "0.1.0"
 authors = []
 edition = "2018"
+rust-version = "1.56.1"
 
 [lib]
 name = "qrcoderust_nif"
@@ -12,3 +13,10 @@ crate-type = ["cdylib"]
 [dependencies]
 rustler = "0.22.2"
 qrcode = { version = "0.11", default-features = false }
+
+[dev-dependencies]
+bardecoder = "0.3.0"
+image = "0.23"
+resvg = "0.19.0"
+usvg = "0.19.0"
+tiny-skia = "0.6.1"
