--- a/native/qrcoderust_nif/Cargo.toml
+++ b/native/qrcoderust_nif/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "qrcoderust_nif"
-version = "0.1.0"
-authors = []
+version = "0.2.0"
+authors = ["Håvard Lindset"]
 edition = "2018"
 rust-version = "1.56.1"
 
@@ -11,8 +11,8 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-rustler = "0.22.2"
-qrcode = { version = "0.11", default-features = false }
+rustler = "0.27.0"
+qrcode = { version = "0.12", default-features = false }
 
 [dev-dependencies]
 image = "0.23"
