--- a/native/qrcoderust_nif/Cargo.toml
+++ b/native/qrcoderust_nif/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "qrcoderust_nif"
-version = "0.2.1"
+version = "0.4.0"
 authors = ["Håvard Lindset"]
-edition = "2018"
-rust-version = "1.56.1"
+edition = "2024"
+rust-version = "1.85.1"
 
 [lib]
 name = "qrcoderust_nif"
@@ -11,8 +11,16 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-rustler = "0.27.0"
+rustler = { version = "0.36.1", default-features = false, features = [
+    "derive",
+] }
 qrcode = { version = "0.12", default-features = false }
+
+[features]
+default = ["nif_version_2_15"]
+nif_version_2_15 = ["rustler/nif_version_2_15"]
+nif_version_2_16 = ["rustler/nif_version_2_16"]
+nif_version_2_17 = ["rustler/nif_version_2_17"]
 
 [dev-dependencies]
 image = "0.23"
